# Trading-Prod

./: .gitignore  README.md  gui_app copy.cpp  trader.py
Trading_Bot/: CMakeLists.txt  fetch_hyperliquid_bbo.h  fetch_hyperliquid_orderbook.h  hyperliquid_bbo.cpp  hyperliquid_orderbook.cpp  hyperliquid_orderbook_parser.h  hyperliquid_parser.h  imgui_bbo_viewer.cpp  imgui_bbo_viewer.h  main  main.cpp  order_manager.hpp  orderbook.hpp
gui/: CMakeLists.txt  disruptor.h  gui_app.cpp  gui_app.hpp  imgui_bbo_viewer.cpp  imgui_bbo_viewer.hpp  orderbook.hpp  websocket_receivers.cpp  websocket_receivers.hpp  websocket_recievers.cpp
market_maker/: config.py  main.py  market_maker.py  models.py  order_book.py  order_manager.py  requirements.txt  risk_manager.py  utils.py  websocket_client.py
org/: CMakeLists.txt  main.cpp
org/core/networking/: resolve_ws.hpp  websocket_aliases.hpp  ws_reader.cpp  ws_reader.hpp
org/datacentre/: control.hpp  control_function_generator.py  hjb_fenicsx.py  hjb_quotes.h5  hjb_solution.h5  hjb_solution.npz  hjb_solver  hjb_solver.cpp  mmaking.ipynb  mmaking_code_added.ipynb  mmaking_expanded_reordered.ipynb  mmaking_updated.ipynb  newmeth.ipynb  strat_ctrl.cpp  test.py
org/exchanges/hyperliquid/: global_atomics.cpp  global_atomics.hpp
org/exchanges/hyperliquid/parsing/: hl_parsers.cpp  hl_parsers.hpp
org/exchanges/hyperliquid/streaming/: subscription_patterns.cpp  subscription_patterns.hpp  threads.cpp  threads.hpp
org/gui/: bbo.hpp  gui_app.hpp  imgui_bbo_viewer.cpp  imgui_bbo_viewer.hpp  obook.hpp  order_manager copy 2.hpp  order_manager.hpp
org/misc/: hyperliquid copy.cpp  hyperliquid_declarations copy.hpp  streaming_main.cpp  streaming_main.hpp
org/portfolio_management/: order_management_system.cpp
server/: CMakeLists.txt  data_forwarder.py  last_known_public_ip.json  new_monitor  new_monitor.cpp  server_ws.cpp  ws_server.py
server/trading/: CMakeLists.txt  order_manager copy.hpp
server/trading/core/networking/: resolve_ws.cpp  ws_reader.cpp  ws_reader.hpp
server/trading/datacentre/: QVI_HJB_Control.py  control.cpp  optimal_quotes.csv  strat_ctrl.hpp
server/trading/exchanges/hyperliquid/parsing/: hl_parsers.cpp
server/trading/exchanges/hyperliquid/streaming/: threads.cpp
server/uWebSockets/uSockets/src/crypto/: sni.c  sni.h
